# mimic_viewer

./: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
install_local_viewer/linux/: install.sh  mimic_viewer.desktop  run_mimic_viewer.sh
install_local_viewer/macos/: install.sh
src/mimic_viewer/data_sources/: zarr_batch_loader.py  zarr_point_loader.py
src/mimic_viewer/loggers/: __init__.py  bimanual_049_logger.py  embodiment_logger.py  single_hand_048_logger.py  utils.py
src/mimic_viewer/web_server/: server.py
src/mimic_viewer/web_server/database/: database.py
src/mimic_viewer/web_server/recordings/: recording_manager.py
